<?xml version="1.0"?>
<package>
  <name>generic_robot_tutorials</name>
  <version>0.0.0</version>
  <description>Tutorial for CPR Generic Robot.</description>
  <maintainer email="jyang@clearpathrobotics.com">Joey Yang</maintainer>

  <license>BSD</license>

  <author email="jyang@clearpathrobotics.com">Joey Yang</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosdoc_lite</build_depend>

  <export>
  </export>
</package>
