<?xml version="1.0"?>
<package>
  <name>cpr_robot_customizer_tutorials</name>
  <version>0.0.0</version>
  <description>Tutorials for Clearpath Robotics' Robot Customizer ROS package
</description>
  <maintainer email="jyang@clearpathrobotics.com">Joey Yang</maintainer>

  <license>BSD</license>

  <author email="jyang@clearpathrobotics.com">Joey Yang</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosdoc_lite</build_depend>

  <export>
  </export>
</package>
